create NoVocabsForTodayException, throw it in getTodaysVocabs method of service and write test